--- a/css-aliases/index.src.html
+++ b/css-aliases/index.src.html
@@ -145,23 +145,24 @@ Script-based Custom Selectors</h3>
 		   numeric vaule greater than some specified numeric value.
 		*/
 		CSS.customSelector.set("_num_greaterthan",
-			                   {
-			                   "parseArgs": function (argsString) {
-			                    	var args = argsString.split(",");
-          					return [args[0], parseInt(args[1], 10)];
-			                   },
-			                   "matches": function (attributeName) {
-			                   	return "[" + attributeName + "]";
-			                   },
-			                   "predicate": function(el, attributeName, expectedValue){
-			                   	var instanceValue = parseInt(el.getAttribute(attributeName), 10);
-			                   	return realValue > expectedValue;
-			                   }
+                    {
+                        "parseArgs": function (argsString) {
+			    var args = argsString.split(",");
+          		    return [args[0], parseInt(args[1], 10)];
+			 },
+			 "matches": function (attributeName) {
+			     return "[" + attributeName + "]";
+			 },
+			 "predicate": function(el, attributeName, expectedValue){
+			     var instanceValue = parseInt(el.getAttribute(attributeName), 10);
+			     return realValue > expectedValue;
+			 }
+                     });
 		&lt;/script>
 		</pre>
 
 		<ul>
-			<li>parseArgs" allows you to provide a function taking an args string and specifying how to parse it into arguments that will be passed to the predicate.  Because arguments are specified once, but predicates are called many times, this is highly more efficient.  The default parseArgs function does nothing but return its input.
+			<li>"parseArgs" allows you to provide a function taking an args string and specifying how to parse it into arguments that will be passed to the predicate.  Because arguments are specified once, but predicates are called many times, this is highly more efficient.  The default parseArgs function does nothing but return its input.
 </li>	
 			<li>"matches" allows an author to improve efficiency of a filter by basing it off of some simple or compound selector which may natively short circuit the filter's call (see (http://www.w3.org/TR/2013/WD-selectors4-20130502/#compound).  Its value may be a simple or compound selector string or a function which yields the same, and it receives as arguments values from parseArgs, making it possible to create the limiting factor from an argument (capture it).  In the above case, we know that this filter only applies in the event that the specified attribute exists on the element.  If unspecified, this value defaults to "*" which causes every potential match in the tree to call the filter.  Again, because this is determined only once, it can be considerably more efficient and registered with the browser's native indexes to avoid the filter being called.
 </li>		
